--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -49,7 +49,7 @@
                 ="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
             <a
               class
-                ="dropdown-item" [routerLink]="['/admin/notification']"
+                ="dropdown-item" [routerLink]="['/employee/notification']"
               href="#"> <i class="fa fa-bell"></i> Quản lý thông báo</a>
             <a
               class
