--- a/angular/angular-template/src/app/employee/employee-delete/employee-delete.component.html
+++ b/angular/angular-template/src/app/employee/employee-delete/employee-delete.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="deleteEmployee(employee.employeeId)">Có </button>
+  <button type="button" class="btn btn-danger" (click)="deleteEmployee(employee.employeeId)">Có </button>
   <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeDialog()">Không</button>
 </div>
 
