--- a/angular/angular-template/src/app/employee/employee-create/employee-create.component.html
+++ b/angular/angular-template/src/app/employee/employee-create/employee-create.component.html
@@ -22,7 +22,12 @@
               Quản lý cá thể
             </a>
           </li>
-
+          <li class="nav-item">
+            <a [routerLink]="['/admin/notification']" class="nav-link" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+              Thông báo
+            </a>
+          </li>
         </ul>
         <hr>
 
