--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -23,6 +23,12 @@
               Quản lý cá thể
             </a>
           </li>
+          <li class="nav-item">
+            <a [routerLink]="['/admin/notification']" class="nav-link" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+              Thông báo
+            </a>
+          </li>
 
         </ul>
         <hr>
@@ -116,6 +122,7 @@
               </a>
             </div>
             <div class="col-sm-12 col-md-7">
+              
               <nav aria-label="Page navigation example">
                 <ul class="pagination d-flex justify-content-md-end justify-content-center">
                   <li class="page-item"><button class="page-link" [hidden]="page < 1" (click)="page = 0; search()">Đầu</button></li>
